[gd_scene load_steps=49 format=2]

[ext_resource path="res://Test.gd" type="Script" id=1]
[ext_resource path="res://gfx/background_gradient.png" type="Texture" id=2]
[ext_resource path="res://shaders/white.tres" type="Material" id=3]
[ext_resource path="res://circle.png" type="Texture" id=4]
[ext_resource path="res://fonts/Bungee-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://EmanatePosition.gd" type="Script" id=6]
[ext_resource path="res://audio/spawn.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/success.wav" type="AudioStream" id=8]
[ext_resource path="res://audio/mistake.wav" type="AudioStream" id=9]
[ext_resource path="res://audio/big_mistake.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/turn.wav" type="AudioStream" id=11]
[ext_resource path="res://gfx/menubutton.png" type="Texture" id=12]
[ext_resource path="res://gfx/menubutton_pressed.png" type="Texture" id=13]
[ext_resource path="res://PauseParent.gd" type="Script" id=14]
[ext_resource path="res://PauseMenu.gd" type="Script" id=15]
[ext_resource path="res://Tutorial.tscn" type="PackedScene" id=16]
[ext_resource path="res://Settings.tscn" type="PackedScene" id=17]

[sub_resource type="ShaderMaterial" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 350.0

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/Bungee-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10, 282.217 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 485.203 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 250, 300 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 250, 300 )

[sub_resource type="DynamicFont" id=12]
size = 45
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=13]
size = 45
font_data = ExtResource( 5 )

[sub_resource type="DynamicFontData" id=14]
font_path = "res://fonts/Bungee-Regular.ttf"

[sub_resource type="DynamicFont" id=15]
size = 45
font_data = SubResource( 14 )

[sub_resource type="DynamicFontData" id=16]
font_path = "res://fonts/Bungee-Regular.ttf"

[sub_resource type="DynamicFont" id=17]
size = 45
font_data = SubResource( 16 )

[sub_resource type="DynamicFontData" id=18]
font_path = "res://fonts/Bungee-Regular.ttf"

[sub_resource type="DynamicFont" id=19]
size = 45
font_data = SubResource( 18 )

[sub_resource type="DynamicFont" id=20]
size = 45
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=21]
size = 35
font_data = ExtResource( 5 )

[sub_resource type="DynamicFontData" id=22]
font_path = "res://fonts/Bungee-Regular.ttf"

[sub_resource type="DynamicFont" id=23]
size = 32
font_data = SubResource( 22 )

[sub_resource type="DynamicFont" id=24]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=25]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=26]
tracks/0/type = "value"
tracks/0/path = NodePath("Circle:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.4, 0.4 ), Vector2( 0.05, 0.05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Circle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "animfunc"
} ]
}

[sub_resource type="Animation" id=27]
tracks/0/type = "value"
tracks/0/path = NodePath("ScoreLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=28]
tracks/0/type = "value"
tracks/0/path = NodePath("Control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 0.988229 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.545098 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=29]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFontData" id=30]
font_path = "res://fonts/Bungee-Regular.ttf"

[sub_resource type="DynamicFont" id=31]
size = 32
font_data = SubResource( 30 )

[node name="Test" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1021.0
margin_bottom = 603.0
color = Color( 0.647059, 0.647059, 0.647059, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 1 )
margin_right = 1024.0
margin_bottom = 608.0
texture = ExtResource( 2 )
expand = true

[node name="Circle" type="Sprite" parent="."]
material = ExtResource( 3 )
position = Vector2( 510.568, 303.925 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="Circle"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Circle/Area2D"]
shape = SubResource( 2 )

[node name="ExpansionTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="Score" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Score"]
margin_right = 1024.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Score"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 70

[node name="Score" type="HBoxContainer" parent="Score/HBoxContainer"]
margin_right = 163.0
margin_bottom = 40.0

[node name="ScoreLabel" type="Label" parent="Score/HBoxContainer/Score"]
margin_top = 3.0
margin_right = 136.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.988235, 0.870588, 1 )
text = "Score:  "

[node name="Label" type="Label" parent="Score/HBoxContainer/Score"]
margin_left = 140.0
margin_top = 3.0
margin_right = 163.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0.988235, 0.870588, 1 )
text = "0"

[node name="HighScore" type="HBoxContainer" parent="Score/HBoxContainer"]
margin_left = 233.0
margin_right = 493.0
margin_bottom = 40.0

[node name="HighScore" type="Label" parent="Score/HBoxContainer/HighScore"]
margin_top = 3.0
margin_right = 233.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0.988235, 0.870588, 1 )
text = "HIGH SCORE:  "

[node name="Value" type="Label" parent="Score/HBoxContainer/HighScore"]
margin_left = 237.0
margin_top = 3.0
margin_right = 260.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0.988235, 0.870588, 1 )
text = "0"

[node name="Streak" type="HBoxContainer" parent="Score/HBoxContainer"]
margin_left = 563.0
margin_right = 563.0
margin_bottom = 40.0

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="EmanatePosition" type="Position2D" parent="."]
pause_mode = 2
position = Vector2( 509.782, 305.01 )
script = ExtResource( 6 )

[node name="WallsContainer" type="Node2D" parent="."]
editor/display_folded = true
position = Vector2( 508.536, 303.481 )

[node name="LeftBoundary" type="Area2D" parent="WallsContainer"]
position = Vector2( -246.053, -197.576 )
scale = Vector2( 1, 0.64 )
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallsContainer/LeftBoundary"]
position = Vector2( 16.6493, 319.065 )
shape = SubResource( 8 )

[node name="ColorRect" type="ColorRect" parent="WallsContainer/LeftBoundary"]
margin_left = 9.86395
margin_top = 25.7755
margin_right = 28.864
margin_bottom = 592.776

[node name="RightBoundary" type="Area2D" parent="WallsContainer"]
position = Vector2( 234.59, -203.485 )
scale = Vector2( 1, 0.64 )
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallsContainer/RightBoundary"]
position = Vector2( 16.6493, 319.065 )
shape = SubResource( 8 )

[node name="ColorRect" type="ColorRect" parent="WallsContainer/RightBoundary"]
margin_left = 6.52209
margin_top = 41.0
margin_right = 25.5221
margin_bottom = 608.0

[node name="TopBoundary" type="Area2D" parent="WallsContainer"]
position = Vector2( -131.439, -139.207 )
rotation = -1.56247
scale = Vector2( 1, 0.521682 )
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallsContainer/TopBoundary"]
position = Vector2( 36.9533, 280.226 )
rotation = -0.00417272
shape = SubResource( 9 )

[node name="ColorRect" type="ColorRect" parent="WallsContainer/TopBoundary"]
margin_left = 30.0
margin_top = -199.0
margin_right = 47.0
margin_bottom = 761.0

[node name="BottomBoundary" type="Area2D" parent="WallsContainer"]
position = Vector2( -136.386, 230.186 )
rotation = -1.56247
scale = Vector2( 1, 0.52035 )
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallsContainer/BottomBoundary"]
position = Vector2( 36.9533, 280.226 )
rotation = -0.00417272
shape = SubResource( 9 )

[node name="ColorRect" type="ColorRect" parent="WallsContainer/BottomBoundary"]
margin_left = 28.6033
margin_top = -203.591
margin_right = 48.6033
margin_bottom = 763.409

[node name="SpawnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0
bus = "Effects"

[node name="SuccessSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -12.0
pitch_scale = 1.3
bus = "Effects"

[node name="BigSuccessSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -12.0
pitch_scale = 0.7
bus = "Effects"

[node name="MistakeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -21.0
bus = "Effects"

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -6.0
bus = "Effects"

[node name="TurnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Effects"

[node name="LeftTouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 253.622, 342.379 )
shape = SubResource( 10 )

[node name="RightTouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 758.539, 340.811 )
shape = SubResource( 11 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 507.691, 298.478 )
current = true

[node name="ShakeCamera" type="Camera2D" parent="."]
position = Vector2( 511.457, 294.154 )

[node name="RotationTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="TweenColor" type="Tween" parent="."]

[node name="MenuButton" type="TextureButton" parent="."]
pause_mode = 2
self_modulate = Color( 1, 0.996078, 0.827451, 1 )
margin_left = 904.0
margin_top = -4.0
margin_right = 977.0
margin_bottom = 44.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
expand = true

[node name="GameOver" type="Control" parent="."]
editor/display_folded = true
visible = false
margin_left = 370.124
margin_top = 179.218
margin_right = 410.124
margin_bottom = 219.218
mouse_filter = 2

[node name="Panel" type="ColorRect" parent="GameOver"]
margin_left = -16.7018
margin_right = 304.298
margin_bottom = 252.0
color = Color( 0.458824, 0.458824, 0.458824, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -19.0452
margin_top = -40.8112
margin_right = 39.955
margin_bottom = 59.1888
custom_constants/separation = 10

[node name="Label" type="Label" parent="GameOver/Panel/VBoxContainer"]
margin_right = 380.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.921569, 0.352941, 0.309804, 1 )
text = "GAME OVER"
align = 1

[node name="RetryButton" type="Button" parent="GameOver/Panel/VBoxContainer"]
margin_top = 56.0
margin_right = 380.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 0.909804, 0.309804, 1 )
text = "RETRY"

[node name="InstructionsButton" type="Button" parent="GameOver/Panel/VBoxContainer"]
margin_top = 118.0
margin_right = 380.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 1, 0.909804, 0.309804, 1 )
text = "instructions"

[node name="SettingsButton" type="Button" parent="GameOver/Panel/VBoxContainer"]
visible = false
margin_top = 180.0
margin_right = 380.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 0.909804, 0.309804, 1 )
text = "Settings"

[node name="QuitButton" type="Button" parent="GameOver/Panel/VBoxContainer"]
margin_top = 180.0
margin_right = 380.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 1, 0.909804, 0.309804, 1 )
text = "quit"

[node name="PauseParent" type="Control" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 14 )

[node name="PauseMenu" type="Control" parent="PauseParent"]
pause_mode = 2
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 353.745
margin_top = 219.139
margin_right = 353.745
margin_bottom = 219.139
script = ExtResource( 15 )

[node name="TextureRect" type="TextureRect" parent="PauseParent/PauseMenu"]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="PauseParent/PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="PauseParent/PauseMenu/VBoxContainer"]
margin_right = 274.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 20 )
custom_colors/font_color = Color( 1, 0.568627, 0.568627, 1 )
text = "PAUSED"
align = 1

[node name="ResumeButton" type="Button" parent="PauseParent/PauseMenu/VBoxContainer"]
margin_top = 56.0
margin_right = 274.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 1, 0.909804, 0.309804, 1 )
text = "resume"

[node name="InstructionsButton" type="Button" parent="PauseParent/PauseMenu/VBoxContainer"]
margin_top = 108.0
margin_right = 274.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 23 )
custom_colors/font_color = Color( 1, 0.909804, 0.309804, 1 )
text = "Instructions"

[node name="SettingsButton" type="Button" parent="PauseParent/PauseMenu/VBoxContainer"]
visible = false
margin_top = 157.0
margin_right = 274.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 24 )
custom_colors/font_color = Color( 1, 0.909804, 0.309804, 1 )
text = "settings"

[node name="MainMenuButton" type="Button" parent="PauseParent/PauseMenu/VBoxContainer"]
margin_top = 157.0
margin_right = 274.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 25 )
custom_colors/font_color = Color( 1, 0.909804, 0.309804, 1 )
text = "MAIN MENU"

[node name="Tutorial" parent="." instance=ExtResource( 16 )]
visible = false

[node name="Settings" parent="." instance=ExtResource( 17 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/game_over = SubResource( 26 )
anims/score = SubResource( 27 )
anims/streak = SubResource( 28 )

[node name="ScoreLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 872.797
margin_top = 173.368
margin_right = 937.797
margin_bottom = 206.368
custom_fonts/font = SubResource( 29 )
custom_colors/font_color = Color( 1, 0.937255, 0.694118, 1 )
text = "+10"

[node name="Control" type="Control" parent="."]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0

[node name="StreakLabel" type="Label" parent="Control"]
margin_left = 30.0714
margin_top = 209.068
margin_right = 215.071
margin_bottom = 242.068
custom_fonts/font = SubResource( 31 )
custom_colors/font_color = Color( 0.921569, 0.784314, 0.0313726, 1 )
text = "Reset"

[node name="StreakLabel3" type="Label" parent="Control"]
margin_left = 31.4318
margin_top = 156.013
margin_right = 216.432
margin_bottom = 189.013
custom_fonts/font = SubResource( 31 )
custom_colors/font_color = Color( 0.921569, 0.784314, 0.0313726, 1 )
text = "3x Streak"

[node name="StreakLabel2" type="Label" parent="Control"]
margin_left = 27.3507
margin_top = 259.402
margin_right = 212.351
margin_bottom = 292.402
custom_fonts/font = SubResource( 31 )
custom_colors/font_color = Color( 0.921569, 0.784314, 0.0313726, 1 )
text = "+20"
[connection signal="area_entered" from="Circle/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="input_event" from="Circle/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="timeout" from="ExpansionTimer" to="." method="_on_ExpansionTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="area_entered" from="WallsContainer/LeftBoundary" to="." method="_on_LeftBoundary_area_entered"]
[connection signal="area_entered" from="WallsContainer/RightBoundary" to="." method="_on_RightBoundary_area_entered"]
[connection signal="area_entered" from="WallsContainer/TopBoundary" to="." method="_on_TopBoundary_area_entered"]
[connection signal="area_entered" from="WallsContainer/BottomBoundary" to="." method="_on_BottomBoundary_area_entered"]
[connection signal="pressed" from="LeftTouchScreenButton" to="." method="_on_LeftTouchScreenButton_pressed"]
[connection signal="pressed" from="RightTouchScreenButton" to="." method="_on_RightTouchScreenButton_pressed"]
[connection signal="timeout" from="RotationTimer" to="." method="_on_RotationTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_all_completed" from="TweenColor" to="." method="_on_TweenColor_tween_all_completed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="GameOver/Panel/VBoxContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="GameOver/Panel/VBoxContainer/InstructionsButton" to="." method="_on_InstructionsButton_pressed"]
[connection signal="pressed" from="GameOver/Panel/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="GameOver/Panel/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="PauseParent/PauseMenu/VBoxContainer/ResumeButton" to="PauseParent" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="PauseParent/PauseMenu/VBoxContainer/InstructionsButton" to="." method="_on_InstructionsButton_pressed"]
[connection signal="pressed" from="PauseParent/PauseMenu/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="PauseParent/PauseMenu/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
